warning in jdk 21 fixed: URL(String) in URL has been deprecated